# mdps-ds-lib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.ci/: Makefile  catchup_pr.sh  store_version.sh  update_setup_version.py  update_version_commit.sh
.github/: README.md
.github/workflows/: feature_pr.yml  feature_pr_merge.yml  feature_pr_pypi.yml  release_pr_create.yml  release_pr_merge.yml
examples/: stage-in-example.ipynb  stage-in-out-via-jupyter.ipynb  stage-in-stage-out-example.ipynb  stage-out-ancillary-example.ipynb  stage-out-example.ipynb
mdps_ds_lib/ds_client/: ds_client_admin.py  ds_client_base.py  ds_client_user.py
mdps_ds_lib/stac_fast_api_client/: sfa_client_base.py  sfa_client_basic_auth.py  sfa_client_bearer.py  sfa_client_cookie_token.py  sfa_client_factory.py  sfa_client_no_auth.py
mdps_ds_lib/stage_in_out/: catalog_granules_abstract.py  catalog_granules_factory.py  catalog_granules_fast_api.py  catalog_granules_unity.py  cataloging_granules_status_checker.py  dapa_client.py  download_granules_abstract.py  download_granules_amalgamation.py  download_granules_daac.py  download_granules_factory.py  download_granules_http.py  download_granules_s3.py  search_collections_cmr.py  search_collections_factory.py  search_collections_unity.py  search_granules_cmr.py  search_granules_factory.py  search_granules_unity.py  stage_in_out_utils.py  upload_arbitrary_files_as_granules.py  upload_granules_abstract.py  upload_granules_by_complete_catalog_s3.py  upoad_granules_factory.py
tests/integration_tests/: test_docker_catalog.py  (+3 more)
(+160 files in other folders)
