[tool.poetry]
name = "uds-lib"
version = "0.1.0"
description = "\"TODO\""
authors = ["Wai Phyo <wai.phyo@jpl.nasa.gov>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "uds_lib"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.51"
elasticsearch = "7.13.4"
fastjsonschema = "^2.19.1"
requests-aws4auth="1.2.3"
pystac="1.9.0"
xmltodict="0.13.0"
requests="2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
