[tool.poetry]
name = "mdps-ds-lib"
version="0.2.0.dev000100"
description = "Mission Data System - MDPS (Unity) Data Service Core library"
authors = ["Wai Phyo <wai.phyo@jpl.nasa.gov>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "mdps_ds_lib"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
#requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/unity-sds/sampleproject"
Issues = "https://github.com/unity-sds/sampleproject/issues"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.51"
elasticsearch = "7.13.4"
fastjsonschema = "^2.19.1"
requests-aws4auth="1.2.3"
pystac="1.9.0"
xmltodict="0.13.0"
requests="2.31.0"
tenacity="8.2.3"
jsonschema = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
